# localSeachVRPTW

./:  MASTER.txt  CMakeLists.txt  config-file.txt
benchmarks/homberger-200-customer/: C1_2_1.TXT-duals.txt  C1_2_1.TXT-moves.txt
benchmarks/homberger-400-customer/: C1_4_1.TXT-duals.txt  C1_4_1.TXT-moves.txt  R1_4_1.TXT-clusterisation.txt  R2_4_1.TXT-clusterisation.txt
benchmarks/homberger-600-customer/: C1_6_1.TXT-duals.txt  C1_6_1.TXT-moves.txt  C1_6_2.TXT-duals.txt  C1_6_2.TXT-moves.txt  C2_6_1.TXT-duals.txt  C2_6_1.TXT-moves.txt  R1_6_1.TXT-duals.txt  R1_6_1.TXT-moves.txt
benchmarks/homberger-800-customer/: C1_8_1.TXT-clusterisation.txt
cmake/modules/: FindGUROBI.cmake
docs/: crossReverse-notes.rtf  documentation.rtf
include/: cost.h  costCapacity.h  costDistance.h  costFixed.h  crossReverseGenerator.h  crossReverseMove.h  data.h  initializer.h  initializerCosts.h  initializerInsertion.h  initializerMultipleRoutes.h  lateAcceptanceSteepestDescent.h  metaheuristic.h  move.h  moveGenerator.h  options.h  parameter.h  parse.h  routes.h  solution.h  tabuSearch.h
notes-questios/: Observations.rtf  questions.rtf
src/: CMakeLists.txt  costCapacity.cpp  costDistance.cpp  costFixed.cpp  crossReverseGenerator.cpp  crossReverseMove.cpp  data.cpp  initializerCosts.cpp  initializerInsertion.cpp  initializerMultipleRoutes.cpp  lateAcceptanceSteepestDescent.cpp  main.cpp  options.cpp  parse.cpp  routes.cpp  solution.cpp  tabuSearch.cpp
